Box sizing fix
fixed overflowing scrolling issue when using box model changes and css grid

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .container {
   display: grid;
 
@@ -15,6 +19,11 @@
 header {
   display: grid;
   grid-template-columns: 2fr 1fr;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 footer {
