--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,48 @@
 body {
   background-color: black;
+  color: white;
   text-align: center;
 
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
-
+  border: 1em solid white;
+  padding: 1em;
 }
 
 header {
-  background-color: blue;
+
 }
 
 header figure {
-  background-color: gold;
+
+}
+
+header figcaption {
+
 }
 
 nav {
-  background-color: gray;
+
+}
+
+nav ul {
+
 }
 
 main {
-  background-color: yellow;
+
+}
+
+main section {
+
 }
 
 footer {
-  background-color: orange;
+
+}
+
+.grid-item {
+  border: 1px solid white;
 }
